drag and drop course cards

--- a/tcf_website/templates/course/user_courses.html
+++ b/tcf_website/templates/course/user_courses.html
@@ -6,7 +6,7 @@
 {% block styles %}
 <link rel="stylesheet" href="{% static 'common/rating_card.css' %}"/>
 <link rel="stylesheet" href="{% static 'common/show-hide.css' %}"/>
-<link rel="stylesheet" href="{% static 'instructor/instructor.css' %}"/>
+<link rel="stylesheet" href="{% static 'course/user_courses.css' %}"/>
 <link rel="stylesheet" href="{% static 'base/tcf-style.css' %}"/>
 
 
@@ -15,6 +15,7 @@
 {% block content %}
 <div class="container mx-auto">
     <h1 class="h2 mt-2"> Saved Courses </h1>
+    {% if courses %}
     <div class="d-flex align-items-baseline">
         <p> Drag and drop to rearrange </p>
         <div id="sortButtons" class="btn-group btn-group ml-auto" role="toolbar" aria-label="Sorting Buttons">
@@ -25,17 +26,18 @@
             <button type="button" id="gpa-sort-btn" class="btn btn-outline-primary">GPA</button>
         </div>
     </div>
-    <ul id="saved_courses_block" class="course-list">
+    {% endif %}
+    <ul id="savedCoursesList" class="course-list">
         {% if courses %}
         {% for saved in courses %}
-        <li>
-        <div class="card mt-3" id="course_{{saved.course_id}}_{{saved.instructor_id}}">
-            <div class="d-flex px-3 m-3" style="font-size: 1.25rem;">
+        <li class="course-card" draggable="true" id="course_{{saved.course_id}}_{{saved.instructor_id}}">
+        <div class="card mt-3">
+            <div class="d-flex px-3 m-3 card-header">
               <a href="{% url 'course_instructor' course_id=saved.course.id instructor_id=saved.instructor.id %}">
                   <strong>{{ saved.course }} </strong> — {{ saved.instructor.full_name }}
               </a>
               <p id="title" hidden> {{saved.course.subdepartment.mnemonic}} {{saved.course.number}} </p>
-              <button class="ml-auto btn btn-sm bg-tcf-indigo text-white unsave_btn" id="btn_{{saved.course_id}}_{{saved.instructor_id}}" type="button">
+              <button class="ml-auto btn btn-sm bg-tcf-indigo text-white unsave-btn" id="btn_{{saved.course_id}}_{{saved.instructor_id}}" type="button">
                   <i class="fa fa-trash-o" aria-hidden="true"></i>
                   Unsave
               </button>
@@ -98,4 +100,13 @@
 {% block js %}
     <script type="module" src="{% static 'course/javascript/user_courses.js' %}"></script>
     <script type="module" src="{% static 'department/bind-sort.js' %}"></script>
+
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script>
+         $( function() {
+             $( "#savedCoursesList" ).sortable();
+             $( "#savedCoursesList" ).disableSelection();
+         } );
+    </script>
 {% endblock %}
