--- a/tcf_website/templates/course/user_courses.html
+++ b/tcf_website/templates/course/user_courses.html
@@ -98,15 +98,11 @@
 {% endblock %}
 
 {% block js %}
-    <script type="module" src="{% static 'course/javascript/user_courses.js' %}"></script>
     <script type="module" src="{% static 'department/bind-sort.js' %}"></script>
 
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script>
-         $( function() {
-             $( "#savedCoursesList" ).sortable();
-             $( "#savedCoursesList" ).disableSelection();
-         } );
-    </script>
+    <!-- For drag and drop, source: https://jqueryui.com/sortable/#default -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+    <script type="module" src="{% static 'course/javascript/user_courses.js' %}"></script>
 {% endblock %}
