--- a/tcf_website/templates/browse/browse.html
+++ b/tcf_website/templates/browse/browse.html
@@ -11,10 +11,13 @@
     {% comment %} <div class="container">
         {% include "../common/notification.html" %}
     </div> {% endcomment %}
-    <div class="container mb-4">
-        {% include "../common/banner_ad.html" %}
-    </div>
     <div class="browse container">
+        <!-- Google adsense -->
+        <div class="container mb-4">
+            {% include "../common/banner_ad.html" %}
+        </div>
+
+        <!-- Browse page content -->
         <h2 class="font-weight-light">Browse by Department</h2>
         <div class="schools text-left">
 
