Styled review according to design mockup

--- a/tcf_website/static/reviews/review.css
+++ b/tcf_website/static/reviews/review.css
@@ -1,11 +1,11 @@
 .review .upvote, .review .downvote {
-    font-size: 2rem;
+    font-size: 1.3rem;
     color: #aaa;
     cursor: pointer;
 }
 
 .review .upvote.active, .review .upvote:hover {
-    color: rgb(220, 72, 36);
+    color: dodgerblue;
 }
 
 .review .downvote.active, .review .downvote:hover {
