Edited downvote color, padding, and recommendability icon

--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -105,7 +105,7 @@
                         </div>
                         <div class="info-row">
                             <div class="info-title">
-                                <i class="fas fa-thumbs-up"></i>&nbsp;Recommend
+                                <i class="fas fa-heart"></i>&nbsp;Recommend
                             </div>
                             <div class="info-bar">
                                 <div class="progress">
