Display total number of reviews for a given course (with or without text)

--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -61,7 +61,7 @@
                 <div class="ratings-row">
                     <div class="rating-card">
                         <span class="rating-card-num rating-num">&mdash;</span>
-                        <p class="rating-card-desc"><i class="fa fa-star fa-fw"></i>&nbsp;Rating</p>
+                        <p class="rating-card-desc"><i class="fa fa-star fa-fw"></i>&nbsp;{{ num_reviews }} Reviews</p>
                     </div>
                     <div class="info-container">
                         <div class="info-row">
