added school collapse on browse

--- a/tcf_website/templates/browse/browse.html
+++ b/tcf_website/templates/browse/browse.html
@@ -4,29 +4,20 @@
 {% block title %}Browse - theCourseForum{% endblock %}
 
 {% block styles %}
-    <link rel="stylesheet" href="{% static 'browse/browse.css' %}"/>
+<link rel="stylesheet" href="{% static 'browse/browse.css' %}" />
 {% endblock %}
 
 {% block content %}
-    {% comment %} <div class="container">
-        {% include "../common/notification.html" %}
-    </div> {% endcomment %}
-    <div class="browse container">
-        <!-- Google adsense -->
-        <div class="container mb-4">
-            {% include "../common/banner_ad.html" %}
-        </div>
+<div class="browse container">
+    <h2 class="font-weight-light">Browse by Department</h2>
+    <div class="schools text-left">
 
-        <!-- Browse page content -->
-        <h2 class="font-weight-light">Browse by Department</h2>
-        <div class="schools text-left">
+        {% include "browse/school.html" with school_name=CLAS.name departments=CLAS.department_set.all id="CLAS"%}
 
-            {% include "browse/school.html" with school_name=CLAS.name departments=CLAS.department_set.all %}
+        {% include "browse/school.html" with school_name=SEAS.name departments=SEAS.department_set.all id="SEAS"%}
 
-            {% include "browse/school.html" with school_name=SEAS.name departments=SEAS.department_set.all %}
+        {% include "browse/grouped_schools.html" with school_name="Other Schools at the University of Virginia" schools=other_schools misc=misc_school%}
 
-            {% include "browse/grouped_schools.html" with school_name="Other Schools at the University of Virginia" schools=other_schools misc=misc_school %}
-
-        </div>
     </div>
+</div>
 {% endblock %}
