--- a/tcf_website/templates/browse/grouped_schools.html
+++ b/tcf_website/templates/browse/grouped_schools.html
@@ -1,31 +1,17 @@
-{% extends "browse/school.html" %}
-
-{% block department_list %}
-  <ul class="school-list">
-      {% for s in schools|dictsort:"name" %}
-          <li>
-            <h6 class="font-weight-bold">{{s}}</h6>
-            <ul class="department-list">
-              {% for d in s.department_set.all %}
+{% for s in schools|dictsort:"name" %}
+  <div class="school card mb-3">
+    <div class="card-header pt-3" data-toggle="collapse"
+    data-target="#school-{{ forloop.counter }}">
+        <h3 class="card-title mb-0">{{s}}</h3>
+    </div>
+    <div class="card-body collapse" id="school-{{ forloop.counter }}">
+        <ul class="department-list">
+            {% for d in s.department_set.all|dictsort:"name" %}
                 <li>
-                  <a href="{% url 'department' dept_id=d.pk %}">{{d}}</a>
+                    <a href="{% url 'department' dept_id=d.pk %}">{{d}}</a>
                 </li>
-              {% endfor %}
-            </ul>
-          </li>
-      {% endfor %}
-      <!-- Adding Miscellaneous schools at the end -->
-      {% if misc_school != None %}
-        <li>
-          <h6 class="font-weight-bold">{{misc_school}}</h6>
-          <ul class="department-list">
-            {% for d in misc_school.department_set.all %}
-              <li>
-                <a href="{% url 'department' dept_id=d.pk %}">{{d}}</a>
-              </li>
             {% endfor %}
-          </ul>
-        </li>
-      {% endif %}
-  </ul>
-{% endblock %}
+        </ul>    
+    </div>
+  </div>
+{% endfor %}
