Changed "# Reviews" to "# Ratings"
Make it more obvious to the user what the number is (a rating)

--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -61,7 +61,7 @@
                 <div class="ratings-row">
                     <div class="rating-card">
                         <span class="rating-card-num rating-num">&mdash;</span>
-                        <p class="rating-card-desc"><i class="fa fa-star fa-fw"></i>&nbsp;{{ num_reviews }} {% if num_reviews == 1 %} Review {% else %} Reviews {% endif %}</p>
+                        <p class="rating-card-desc"><i class="fa fa-star fa-fw"></i>&nbsp;{{ num_reviews }} {% if num_reviews == 1 %} Rating {% else %} Ratings {% endif %}</p>
                     </div>
                     <div class="info-container">
                         <div class="info-row">
