--- a/tcf_website/templates/common/rating_card.html
+++ b/tcf_website/templates/common/rating_card.html
@@ -47,7 +47,7 @@
                   {% endif %}
                 </p>
               </div>
-              <div class="col-12 col-lg-3 offset-lg-3" {% if not last_taught %}style="opacity: 0;"{% endif %} {% ifequal last_taught current_semester %}style="opacity: 0;"{% endifequal %}>
+              <div class="col-12 col-lg-3 offset-lg-3 last-taught" {% if not last_taught %}style="opacity: 0;"{% endif %}>
                 <small class="mb-0 text-uppercase">
                   Last Taught
                 </small>
