--- a/tcf_website/templates/browse/grouped_schools.html
+++ b/tcf_website/templates/browse/grouped_schools.html
@@ -2,7 +2,13 @@
   <div class="school card mb-3">
     <div class="card-header pt-3" data-toggle="collapse"
     data-target="#school-{{ forloop.counter }}">
-        <h3 class="card-title mb-0">{{s}}</h3>
+        <div class="float-left">
+            <h3 class="card-title mb-0 alignleft">{{s}}</h3>
+        </div>
+        <div class="float-right">
+            <h3><i class="fas fa-chevron-down"></i></h3>
+        </div>
+        <div class="clearfix"></div>
     </div>
     <div class="card-body collapse" id="school-{{ forloop.counter }}">
         <ul class="department-list">
