--- a/tcf_website/templates/browse/school.html
+++ b/tcf_website/templates/browse/school.html
@@ -1,7 +1,13 @@
 <div class="school card mb-3">
     <div class="card-header pt-3" data-toggle="collapse"
     data-target="#school-{{ id }}" aria-expanded="true">
-        <h3 class="card-title mb-0">{{school_name}}</h3>
+        <div class="float-left">
+            <h3 class="card-title mb-0 alignleft">{{school_name}}</h3>
+        </div>
+        <div class="float-right">
+            <h3><i class="fas fa-chevron-down"></i></h3>
+        </div>
+        <div class="clearfix"></div>
     </div>
     <div class="card-body collapse show" id="school-{{ id }}">
       {% block department_list %}
