--- a/tcf_website/templates/reviews/review_form_content.html
+++ b/tcf_website/templates/reviews/review_form_content.html
@@ -40,7 +40,7 @@
     Tell us more about the course and instructor</h2>
   <div class="form-group col mb-3">
     <textarea class="form-control" id="reviewtext" name="text" rows="5"
-              placeholder="(Aim for 300 words or more! Include information about the professor's teaching style and ability to convey information, workload and assignment types. Include what you liked about the course and what could be improved on. Well written reviews help other students get a good understanding of classes they're considering taking.)" minlength="100" maxlength="5000">{{ form.text.value }}</textarea>
+              placeholder="(Aim for 300 words or more! Include information about the professor's teaching style and ability to convey information, workload and assignment types. Include what you liked about the course and what could be improved on. Well-written reviews help other students get a good understanding of classes they're considering taking!)" minlength="100" maxlength="5000">{{ form.text.value }}</textarea>
   </div>
     <!-- Message for Progress Bar-->
   <div class="form-group col-12">
