--- a/tcf_website/templates/course/save_course_form.html
+++ b/tcf_website/templates/course/save_course_form.html
@@ -3,17 +3,24 @@
 <div class="modal fade" id="saveCourseModal" tabindex="-1" role="dialog" aria-labelledby="saveCourseModal" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
       <div class="modal-body">
-        <form class="needs-validation" id="save_course" novalidate>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        <form id="saveCourseForm" class="mt-4" novalidate>
           <div class="form-row">
+              <div class="col pl-0">
+                  <label for="courseField">Course</label>
+                  <input type="text" class="form-control" id="courseField" value="" readonly>
+              </div>
+              <div class="col pr-0">
+                  <label for="instructorField">Instructor</label>
+                  <input type="text" class="form-control" id="instructorField" value="" readonly>
+              </div>
           </div>
           <div class="form-row">
-          </div>
+              <label for="descriptionField">Notes</label>
+              <textarea class="form-control" id="notesField" rows="3"></textarea>
           </div>
           <div class="form-row justify-content-center">
             <button type="button" id="saveCourseBtn" class="btn btn-primary align-self-center">Save</button>
