--- a/tcf_website/templates/course/user_courses.html
+++ b/tcf_website/templates/course/user_courses.html
@@ -29,8 +29,9 @@
     {% endif %}
     <ul id="savedCoursesList" class="course-list">
         {% if courses %}
+        {% csrf_token %}
         {% for saved in courses %}
-        <li class="course-card" draggable="true" id="course_{{saved.course_id}}_{{saved.instructor_id}}">
+        <li class="course-card" draggable="true" id="course_{{saved.course_id}}_{{saved.instructor_id}}_{{saved.id}}">
         <div class="card mt-3">
             <div class="d-flex px-3 m-3 card-header">
               <a href="{% url 'course_instructor' course_id=saved.course.id instructor_id=saved.instructor.id %}">
@@ -75,10 +76,12 @@
                         <p class="h4">{{ saved.semester_last_taught }}</p>
                     </div>
                     <div class="col">
+                        <a href="#saveCourseModal" data-toggle="modal">
                         <small class="text-uppercase">
                             <i class="fa fa-sticky-note"></i> Notes
                         </small>
                         <p class="h4">{{ saved.notes }}</p>
+                        </a>
                     </div>
                 </ul>
             </div>
@@ -95,6 +98,9 @@
         {% endif %}
     </ul>
 </div>
+
+{% include "course/save_course_form.html" %}
+
 {% endblock %}
 
 {% block js %}
