thumbs up to heart for consistency

--- a/tcf_website/templates/reviews/review.html
+++ b/tcf_website/templates/reviews/review.html
@@ -95,8 +95,8 @@
                             <i class="fa fa-dumbbell fa-fw"></i>
                             {{ review.difficulty }}
                         </div>
-                        <div class="mr-3 mr-sm-4"   data-toggle="tooltip" data-placement="bottom" title="Recommendability">
-                            <i class="fas fa-thumbs-up"></i>
+                        <div class="mr-3 mr-sm-4"   data-toggle="tooltip" data-placement="bottom" title="Recommend">
+                            <i class="fas fa-heart"></i>
                             {{ review.recommendability }}
                         </div>
                         <div data-toggle="tooltip" data-placement="bottom" title="Hours Per Week">
