Add leaderboard to several pages

--- a/tcf_website/templates/browse/browse.html
+++ b/tcf_website/templates/browse/browse.html
@@ -12,13 +12,10 @@
         {% include "../common/notification.html" %}
     </div> {% endcomment %}
     <div class="browse container">
-        <!-- Google adsense -->
-        <div class="container mb-4">
-            {% include "../common/banner_ad.html" %}
-        </div>
+        {% include "../common/leaderboard_ad.html" with ad_slot="9691204298" %}
 
         <!-- Browse page content -->
-        <h2 class="font-weight-light">Browse by Department</h2>
+        <h2 class="font-weight-light mt-4">Browse by Department</h2>
         <div class="schools text-left">
 
             {% include "browse/school.html" with school_name=CLAS.name departments=CLAS.department_set.all %}
