--- a/tcf_website/templates/search/search.html
+++ b/tcf_website/templates/search/search.html
@@ -9,6 +9,7 @@
 
 {% block content %}
     <div class="search container px-5">
+      {% include "../common/leaderboard_ad.html" with ad_slot="2263598815" %}
 
       <div class="search-title row p-4">
         <h2>
