--- a/tcf_website/templates/common/leaderboard_ad.html
+++ b/tcf_website/templates/common/leaderboard_ad.html
@@ -1,6 +1,6 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
-    style="display:block;height: 90px;border: 2px solid black"
+    style="display:block;height: 90px;"
     data-ad-client="ca-pub-1816162577232603"
     data-ad-slot="{{ ad_slot }}"
 ></ins>
