Finished Command Line Logic

--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -71,7 +71,7 @@
     <!-- Icons Grid -->
     <section class="features-icons container px-5 pb-5">
         <div class="row px-md-4 text-center">
-            <div class="col-lg-4">
+            <div id="browse" class="col-lg-4">
                 <a href="{% url 'browse' %}" class="link-unstyled">
                     <div class="card mx-sm-3 my-3">
                         <div class="card-body features-icons-item mx-auto mb-2">
@@ -290,7 +290,7 @@
                                 <a href="https://discord.gg/tAjzH7eyvW" class="text-tcf-blue">Discord server</a>!</p>
                         </div>
                         <div class="row justify-content-center">
-                            <button type="button" data-dismiss="modal" class="btn btn-primary bg-tcf-indigo"> Thank
+                            <button id = "thankYouButton" type="button" data-dismiss="modal" class="btn btn-primary bg-tcf-indigo"> Thank
                                 you!
                             </button>
                         </div>
