Finished Selenium Logic for Future Tests

--- a/tcf_website/templates/browse/browse.html
+++ b/tcf_website/templates/browse/browse.html
@@ -15,7 +15,7 @@
         {% include "../common/leaderboard_ad.html" with ad_slot="9691204298" %}
 
         <!-- Browse page content -->
-        <h2 class="font-weight-light mt-4">Browse by Department</h2>
+        <h2 class="font-weight-light mt-4" id="browse-title">Browse by Department</h2>
         <div class="schools text-left">
 
             {% include "browse/school.html" with school_name=CLAS.name departments=CLAS.department_set.all %}
