--- a/tcf_website/templates/course/course.html
+++ b/tcf_website/templates/course/course.html
@@ -22,7 +22,7 @@
 
         <div class="instructors container-lg mt-3">
             <div class="d-md-flex align-items-baseline my-3">
-                <h1 class="mr-md-3 text-nowrap">{{ course.code }}</h1>
+                <h1 class="mr-md-3 text-nowrap" id="course-code">{{ course.code }}</h1>
                 <h2>{{ course.title }}</h2>
             </div>
 
