--- a/tcf_website/templates/search/searchbar.html
+++ b/tcf_website/templates/search/searchbar.html
@@ -5,7 +5,7 @@
     <input type="search" class="form-control border border-right-0"
             placeholder="Search for a class or professor..." aria-label="Search" name="q" value="{{query}}">
     <div class="input-group-append">
-      <button class="btn btn-outline-secondary border border-left-0" type="submit">
+      <button class="btn btn-outline-secondary border border-left-0" id="search-button" type="submit">
           <i class="fa fa-search" aria-hidden="true"></i>
       </button>
     </div>
