--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -71,8 +71,8 @@
     <!-- Icons Grid -->
     <section class="features-icons container px-5 pb-5">
         <div class="row px-md-4 text-center">
-            <div id="browse" class="col-lg-4">
-                <a href="{% url 'browse' %}" class="link-unstyled">
+            <div class="col-lg-4">
+                <a href="{% url 'browse' %}" class="link-unstyled" id="browse" >
                     <div class="card mx-sm-3 my-3">
                         <div class="card-body features-icons-item mx-auto mb-2">
                             <div class="features-icons-icon d-flex">
