modal to add notes

--- a/tcf_website/templates/course/save_course_form.html
+++ b/tcf_website/templates/course/save_course_form.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div class="modal fade" id="saveCourseModal" tabindex="-1" role="dialog" aria-labelledby="saveCourseModal" aria-hidden="true">
+<div class="modal fade" id="saveCourseModal{{course.id}}" tabindex="-1" role="dialog" aria-labelledby="saveCourseModal" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-body">
@@ -8,22 +8,16 @@
             <span aria-hidden="true">&times;</span>
           </button>
         <form id="saveCourseForm" class="mt-4" novalidate>
-          <div class="form-row">
-              <div class="col pl-0">
-                  <label for="courseField">Course</label>
-                  <input type="text" class="form-control" id="courseField" value="" readonly>
-              </div>
-              <div class="col pr-0">
-                  <label for="instructorField">Instructor</label>
-                  <input type="text" class="form-control" id="instructorField" value="" readonly>
-              </div>
+          <div class="form-row mb-2">
+              <strong> {{course.subdepartment.mnemonic}} {{course.number}} </strong> — {{ instructor.full_name }}
+              <input id="instructor_id{{course.id}}" type="hidden" value="{{instructor.id}}">
           </div>
           <div class="form-row">
               <label for="descriptionField">Notes</label>
-              <textarea class="form-control" id="notesField" rows="3"></textarea>
+              <textarea class="form-control" id="notesField{{course.id}}" placeholder="Use this space to save pros, cons, or other notes to yourself." rows="3">{{ notes }}</textarea>
           </div>
           <div class="form-row justify-content-center">
-            <button type="button" id="saveCourseBtn" class="btn btn-primary align-self-center">Save</button>
+            <button type="button" id="saveCourseBtn{{course.id}}" class="btn btn-primary align-self-center">Save</button>
           </div>
         </form>
       </div>
